--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                       />
                     </div>
                     <div class="message-box-date">
-                      <span>22/4/2023</span>
+                      <span>9:22 AM</span>
                     </div>
                   </div>
                   <div class="dropdown">
@@ -415,7 +415,7 @@
               <div class="message">
                 <div class="message-wrapper-right">
                   <div class="message-content">
-                    <span> Hello there I am Vatsal ! What is your name ? </span>
+                    <span> Hello there I am Vatsal ! What is your name ? Hello there I am Vatsal ! What is your name ? </span>
                   </div>
                 </div>
                 <div class="messageoptions-right">
@@ -425,7 +425,7 @@
                   </div>
                   <div class="avtar-date">
                     <div class="message-box-date">
-                      <span>22/4/2023</span>
+                      <span>10:22 PM</span>
                     </div>
                     <div class="message-box-dp">
                       <img
